<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".paint.FreePaint">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/new_btn"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/draw_btn"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/erase_btn"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/save_btn"
            android:contentDescription="@string/save"
            android:src="@drawable/save"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/exit_btn"
            android:contentDescription="@string/exit"
            android:src="@drawable/backbuttonpaint"></ImageButton>

    </LinearLayout>
    
    <com.rohit.freepaint.paint.FreePaintView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/drawing"
        android:layout_weight="1"
        android:background="#FFFFFF"
        ></com.rohit.freepaint.paint.FreePaintView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paint_colors"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:background="#FF660000"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FF660000"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFF0000"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FFFF0000"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFF6600"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FFFF6600"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFFCC00"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FFFFCC00"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF009900"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FF009900"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF009999"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FF009999"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF0000ff"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FF0000ff"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF990099"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FF990099"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFF6666"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FFFF6666"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFFFFFF"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FFFFFFFF"></ImageButton>

        <ImageButton
            android:layout_width="@dimen/color_width"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF787878"
            android:onClick="paintClicked"
            android:contentDescription="@string/paint"
            android:src="@drawable/paint"
            android:tag="#FF787878"></ImageButton>

    </LinearLayout>

</LinearLayout>