<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:layout_weight="1"
    android:padding="5dp"
    android:background="@drawable/appbackground"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:gravity="center">

            <!--<ImageView
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logoapp2"></ImageView>-->

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/freepaint"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/radio_button_1"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="onChoosingPaint"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/findanagram"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/radio_button_2"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="onChoosingAnagram"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/tictactoe"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/radio_button_3"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="onChoosingTicTacToe"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/killthemall"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/radio_button_4"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="onChoosingKillThemAll"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/dodger"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/radio_button_5"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="onChoosingDodger"/>

        </LinearLayout>

        <android.widget.ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/red"
            android:visibility="gone"
            android:id="@+id/progressBar">

        </android.widget.ProgressBar>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/zorque"
            android:gravity="center_horizontal"
            android:text="@string/watermark"
            android:textColor="@color/red"
            android:textSize="@dimen/watermark_size" />

    </RelativeLayout>


</LinearLayout>