<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:layout_weight="1"
    android:padding="5dp"
    android:background="@drawable/tictactoebackground"
    tools:context=".tictactoe.TicTacToe">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_ttt"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/appuser"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:gravity="center">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_singlePlayer"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/single_player"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="startGame_singlePlayer"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_online"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/online"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="startGameOnline"
                android:visibility="gone"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_about"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/about"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="ShowAboutNote"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_exit"
                android:layout_width="@dimen/width_menu_button"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:layout_marginTop="20dp"
                fancy:fb_textSize="@dimen/size_menu_button"
                fancy:fb_textFont="fonts/zorque.ttf"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="@color/black"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/exit"
                fancy:fb_textColor="#FFFFFF"
                android:onClick="EndGame"/>

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/zorque"
            android:gravity="center_horizontal"
            android:text="@string/watermark"
            android:textColor="@color/blue"
            android:textSize="@dimen/watermark_size" />

        <ImageView
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/unmute"
            android:id="@+id/tttunmutebtn"
            android:visibility="gone"></ImageView>

        <ImageView
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/mute"
            android:id="@+id/tttmutebtn"
            android:visibility="gone"></ImageView>

    </RelativeLayout>

</LinearLayout>