<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:layout_weight="1"
    android:padding="5dp"
    android:background="@drawable/dodgerbackground"
    tools:context=".dodger.Dodger">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swiperefresh">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_marginTop="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/appuser"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_kta_highscore"
                android:text="@string/highscore"
                android:textColor="@color/gray"
                android:id="@+id/highscoretext"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:fontFamily="@font/zorque"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="60dp"></View>

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/start"
                    android:layout_width="@dimen/width_menu_button"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="20dp"
                    fancy:fb_textSize="@dimen/size_menu_button"
                    fancy:fb_textFont="fonts/zorque.ttf"
                    fancy:fb_borderColor="@color/gray"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/black"
                    fancy:fb_focusColor="@color/blackFocus"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="30dp"
                    fancy:fb_text="@string/start_new"
                    fancy:fb_textColor="#FFFFFF"
                    android:onClick="start"/>

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/exit"
                    android:layout_width="@dimen/width_menu_button"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="20dp"
                    fancy:fb_textSize="@dimen/size_menu_button"
                    fancy:fb_textFont="fonts/zorque.ttf"
                    fancy:fb_borderColor="@color/gray"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/black"
                    fancy:fb_focusColor="@color/blackFocus"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="30dp"
                    fancy:fb_text="@string/exit"
                    fancy:fb_textColor="#FFFFFF"
                    android:onClick="exit"/>

            </LinearLayout>

            <android.widget.ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/red"
                android:visibility="gone"
                android:id="@+id/progressBar">

            </android.widget.ProgressBar>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/zorque"
                android:gravity="center_horizontal"
                android:text="@string/watermark"
                android:textColor="@color/black"
                android:textSize="@dimen/watermark_size" />

        </RelativeLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>